swagger 文档生成错误纠正
